--- a/ATP-II/2021-12-01_Project-02/.vscode/tasks.json
+++ b/ATP-II/2021-12-01_Project-02/.vscode/tasks.json
@@ -8,7 +8,7 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-w",
-                "${file}"
+                "${file}",
             ],
             "options": {
                 "cwd": "${fileDirname}"
