feat(compilers): add second task achievable

--- a/compilers/Makefile
+++ b/compilers/Makefile
@@ -1,21 +1,28 @@
 FLEX_CC=flex
+BISON_CC=bison -d -t
 CC=gcc
-CFLAGS=-lm -fdiagnostics-color=always
+CFLAGS=-lm -fdiagnostics-color=always -ll
 
-MAIN_SOURCE=lex.yy.c
+FLEX_OUT_SOURCE=lex.yy.c
+BISON_MAIN_OUT_SOURCE=main.tab.c
+BISON_TEST_OUT_SOURCE=test.tab.c
 FLEX_MAIN_SOURCE=main.lex
+BISON_MAIN_SOURCE=main.y
 FLEX_TEST_SOURCE=test.lex
+BISON_TEST_SOURCE=test.y
 
 MAIN_INPUT_FILE=input.txt
 TEST_FILE=test.txt
 
 make_main:
+	$(BISON_CC) $(BISON_MAIN_SOURCE)
 	$(FLEX_CC) $(FLEX_MAIN_SOURCE)
-	$(CC) -o main $(MAIN_SOURCE) $(CFLAGS)
+	$(CC) -o main $(FLEX_OUT_SOURCE) $(BISON_MAIN_OUT_SOURCE) $(CFLAGS)
 
 make_test:
+	$(BISON_CC) $(BISON_TEST_SOURCE)
 	$(FLEX_CC) $(FLEX_TEST_SOURCE)
-	$(CC) -o main $(MAIN_SOURCE) $(CFLAGS)
+	$(CC) -o main $(FLEX_OUT_SOURCE) $(BISON_TEST_OUT_SOURCE) $(CFLAGS)
 
 main: make_main
 	clear
