--- a/07-period/new-technologies/project-03-sra/app.json
+++ b/07-period/new-technologies/project-03-sra/app.json
@@ -18,6 +18,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.wenovate.sra",
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -43,6 +44,11 @@
           ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8f3067d2-8922-4dd9-a405-96853a3911b8"
+      }
+    }
   }
 }
