--- a/07-period/new-technologies/project-03-sra/package.json
+++ b/07-period/new-technologies/project-03-sra/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "eas-cli": "^9.1.0",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
     "expo-splash-screen": "~0.27.4",
@@ -18,8 +21,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
