feat(pcp): add project-02 with mpi

--- a/08-period/pcp/project-03-mpi-double-integrals/Makefile
+++ b/08-period/pcp/project-03-mpi-double-integrals/Makefile
@@ -2,7 +2,7 @@ clear:
 	rm ./main -f
 
 compile_main:
-	g++ -o main main.c -lm -fopenmp -O2 -O3 -Wall
+	mpicc -o main main.c -lm -O2 -O3 -Wall
 
 main: compile_main
-	./main > output.txt
+	mpirun -n 8 ./main
