feat(mpi-reduce-sockets): add base for setup without mpi_barrier

--- a/08-period/pcp/project-01-mpi-reduce-sockets/Makefile
+++ b/08-period/pcp/project-01-mpi-reduce-sockets/Makefile
@@ -2,11 +2,11 @@ clear:
 	rm ./main ./output.txt ./sorted.txt -f
 
 compile: clear
-	mpicc -o main *.c -lm
+	gcc -o main *.c -lm
 
 run_and_export: compile
-	mpirun -np 9 ./main > output.txt
+	./main 0 & ./main 1 & ./main 2 & ./main 3 & ./main 4 & ./main 5 & ./main 6 & ./main 7 ./main 8
 	cat output.txt | sort -n > sorted.txt
 
 run: compile
-	mpirun -np 9 ./main
+	./main 0 & ./main 1 & ./main 2 & ./main 3 & ./main 4 & ./main 5 & ./main 6 & ./main 7 ./main 8
